@@ -1,3 +1,8 @@
+2020-01-24  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test32-shell-command): Test error buffer
+	for synchronous `shell-command' only.
+
 2020-01-18  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test44-threads): Remove.
